--- a/wrangler.toml
+++ b/wrangler.toml
@@ -18,3 +18,8 @@ database_id = "e24eb37b-6b13-4e84-b1af-63de0dedcc6d"
 [[r2_buckets]]
 binding = "R2"
 bucket_name = "share"
+
+[[workflows]]
+name = "telegram-edit-message-workflow"
+binding = "EDIT_MESSAGE_WORKFLOW"
+class_name = "EditMessageWorkflow"
